srcs/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: grafana
  name: grafana
spec:
  type: LoadBalancer
  ports:
  - port: 3000
  selector:
    app: grafana

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
          hostPort: 3000
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-persistent-storage
      volumes:
      - name: grafana-persistent-storage
        persistentVolumeClaim:
          claimName: grafana-pv-claim
