srcs/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: ft_services
spec:
  ports:
  - port: 3306
  selector:
    app: ft_services
    tier: mysql
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ft_services
        tier: mysql
    spec:
      restartPolicy: Always
      containers:
      - image: wangxian/alpine-mysql
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
