srcs/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: ft_services
spec:
  ports:
  - port: 443
  - port: 80
  selector:
    app: ft_services
    tier: nginx
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: ft_services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ft_services
      tier: nginx
  template:
    metadata:
      labels:
        app: ft_services
        tier: nginx
    spec:
      restartPolicy: Always
      containers:
      - name: nginx
        image: ./nginx
        ports:
        - containerPort: 443
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/ssl-cert.conf
          subPath: ssl-cert.conf
          readOnly: true
        - name: nginx-ssl-key
          mountPath: /etc/nginx/ssl-cert.key
          subPath: ssl-cert.key
          readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-ssl-key
          configMap:
            name: nginx-ssl-key
