srcs/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: ft_services
spec:
  ports:
  - port: 80
  selector:
    app: ft_services
    tier: admin
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: ft_services
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: ft_services
      tier: admin
  template:
    metadata:
      labels:
        app: ft_services
        tier: admin
    spec:
      restartPolicy: Always
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
        - containerPort: 80
          hostPort: 5000
