srcs/sftp.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftp
  labels:
    app: ft_services
spec:
  ports:
  - port: 21
  selector:
    app: ft_services
    tier: sftp
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftp
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: sftp
  replicas: 1
  template:
    metadata:
      labels:
        app: ft_services
        tier: sftp
    spec:
      restartPolicy: Always
      containers:
      - name: sftp
        image: atmoz/sftp:latest
        ports:
        - containerPort: 22
          hostPort: 21
        volumeMounts:
        - mountPath: /home/unicorn
          name: sftp-persistant-storage
        - mountPath: /etc/ssh/ssh_host_ed25519_key
          name: sftp-host-keys
          subPath: ssh_host_ed25519_key
          readOnly: true
        - mountPath: /etc/ssh/ssh_host_rsa_key
          name: sftp-host-keys
          subPath: ssh_host_rsa_key
          readOnly: true
      volumes:
      - name: sftp-persistant-storage
        persistentVolumeClaim:
          claimName: sftp-pv-claim
      - name: sftp-host-keys
        secret:
          secretName: sftp-host-keys
