srcs/telegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  labels:
    name: telegraf
spec:
  type: ClusterIP
  selector:
    name: telegraf

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  labels:
    name: telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      name: telegraf
  template:
    metadata:
      labels:
        name: telegraf
    spec:
      serviceAccountName: telegraf-account
      containers:
      - name: telegraf
        image: "telegraf:1.12-alpine"
        volumeMounts:
        - name: config
          mountPath: /etc/telegraf
      volumes:
      - name: config
        configMap:
          name: telegraf-config
