srcs/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: ft_services
spec:
  ports:
  - port: 80
  selector:
    app: ft_services
    tier: frontend
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: ft_services
spec:
  selector:
    matchLabels:
      app: ft_services
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ft_services
        tier: frontend
    spec:
      restartPolicy: Always
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
